CostalCloud/force-app/main/default/objects/TCS_Resource_Cross_Reference__c.object
<CustomObject>
    <description>Table to hold TCS contacts that will also be used for service resource lookup to accounts etc.</description>
    <label>TCS Resource Cross Reference</label>
    <nameField>
        <label>TCS Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TCS Resource Cross Reference</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>