CostalCloud/force-app/main/default/objects/TCS_Resource_Cross_Reference__c/fields/Account_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Legacy_ID__c</fullName>
    <formula>Installer_Account__r.Legacy_ID_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Legacy ID</label>
    <type>Text</type>
</CustomField>