CostalCloud/force-app/main/default/objects/TCS_Resource_Cross_Reference__c/fields/Installer_Account__c.field-meta.xml
<CustomField>
    <fullName>Installer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TCS Resource Cross Reference</relationshipLabel>
    <relationshipName>TCS_Resource_Cross_Reference</relationshipName>
    <type>Lookup</type>
</CustomField>