CostalCloud/force-app/main/default/objects/TCS_Resource_Cross_Reference__c/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <inlineHelpText>Will be auto populated based on the &quot;Name&quot; field.  Only one resource per unique full name allowed.</inlineHelpText>
    <label>Unique Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>