CostalCloud/force-app/main/default/objects/TCS_Resource_Cross_Reference__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Installer_Account__c</columns>
    <columns>Installer_Contact__c</columns>
    <columns>Unique_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>